<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/your_wallets" />

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="fill_parent"
        android:layout_height="341dp"
        android:layout_gravity="center_horizontal" >
		
	    <LinearLayout
	        android:id="@+id/flip1"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:background="@drawable/border"
	        android:orientation="vertical" >
	
	        <ListView
	            android:id="@+id/listView1"
	            android:layout_width="match_parent"
	            android:layout_height="250dp" 
	            android:cacheColorHint="#00000000">
	        </ListView>
	
	        <LinearLayout
	            android:id="@+id/seperator1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/divider2"
	            android:orientation="horizontal" >
	        </LinearLayout>
	
	        <ScrollView
	            android:id="@+id/scrollView1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	
	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:orientation="vertical" >
	
	                <TextView
	                    android:id="@+id/textView2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="@string/prices" />
		
	                <TextView
	                    android:id="@+id/textView3"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center"
	                    android:text="Small Text"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
	                <TextView
	                    android:id="@+id/textView4"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="Small Text"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
		
	                <TextView
	                    android:id="@+id/textView5"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_horizontal"
	                    android:text="Small Text"
	                    android:textAppearance="?android:attr/textAppearanceSmall" />
	
	            </LinearLayout>
	            
	        </ScrollView>
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/flip2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@drawable/border" >

	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/app_icon" 
	            android:layout_gravity="center_horizontal"
	            />
	        <TextView
		        android:id="@+id/textView6"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="Your accounts" />
	        
	        <TextView
		        android:id="@+id/textView7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="Your accounts" 
		        android:layout_marginBottom="5dp"/>

	    </LinearLayout>
	    
	</ViewFlipper>      

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.38"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_weight="0.30"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:src="@drawable/toolbar_add" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add" 
                    android:layout_marginTop="10dp"/>
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:orientation="vertical" >
                
	            <ImageButton
	                android:id="@+id/imageButton2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:background="@null"
	                android:src="@drawable/toolbar_export" />
	            
	            <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/export" 
                    android:layout_marginTop="10dp"/>
                
            </LinearLayout>
	
            <LinearLayout
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >
	            
	            <ImageButton
	                android:id="@+id/imageButton3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:background="@null"
	                android:src="@drawable/toolbar_share" />
	            <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/share" 
                    android:layout_marginTop="10dp"/>
                
            </LinearLayout>
	
	            
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>